# opa-py

./: docker-compose.yml  pyproject.toml
policies/: test.rego
